--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 @font-face {
     font-family: 'SF Fedora';
     src: url(../fonts/SF\ Fedora.ttf);
 }
 
-
+#background-video{
+position: absolute;
+width: 100%;
+height: 100%;
+object-fit: cover;
+opacity: 0.8;
+}
 
 html {
     background-color: white;
 }
+
+
 
 @layer base {
     html {
