--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,13 +14,26 @@ position: absolute;
 width: 100%;
 height: 100%;
 object-fit: cover;
-opacity: 0.8;
 }
 
 html {
     background-color: white;
 }
 
+.main{
+    backdrop-filter: blur(10px);
+     
+}
+
+@layer components {
+    .headerLink {
+        @apply cursor-pointer opacity-75 transition hover:opacity-100;
+    }
+ 
+    .headerLink {
+        @apply h-6 w-6 cursor-pointer opacity-75 transition hover:opacity-100;
+    }
+}
 
 
 @layer base {
