--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,11 +9,8 @@
     src: url(../fonts/SF\ Fedora.ttf);
 }
 
-#background-video{
-position: absolute;
-width: 100%;
-height: 100%;
-object-fit: cover;
+::-webkit-scrollbar{
+    display: none;
 }
 
 html {
