--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,32 +9,42 @@
     src: url(../fonts/SF\ Fedora.ttf);
 }
 
-::-webkit-scrollbar{
-    display: none;
+* {
+    margin: 0;
+    padding: 0;
 }
 
 html {
     background-color: white;
 }
 
-.main{
-    backdrop-filter: blur(10px);
-     
-}
-
-@layer components {
-    .headerLink {
-        @apply cursor-pointer opacity-75 transition hover:opacity-100;
-    }
- 
-    .headerLink {
-        @apply h-6 w-6 cursor-pointer opacity-75 transition hover:opacity-100;
-    }
-}
-
-
 @layer base {
     html {
         font-family: SF Fedora, sans-serif;
     }
+}
+
+/*  VIdeo css*/
+::-webkit-scrollbar {
+    display: none;
+}
+
+.main {
+    width: 100%;
+    height: 100vh;
+}
+
+.content{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+/* nav */
+@layer components {
+.headerLink {
+    @apply cursor-pointer opacity-75 transition hover:opacity-100
+}
+
 }
